新增提交订单页和样式的改动

--- a/manifest.json
+++ b/manifest.json
@@ -42,9 +42,11 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wx54337e15998b0627",
         "setting" : {
-            "urlCheck" : true
+            "urlCheck" : true,
+            "es6" : false,
+            "postcss" : false
         }
     }
 }
